[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
#wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git"}
wg_2024 = { git = "https://github.com/ZGako/WGL_repo_2024/", branch = "trait-object-compatibility"}

crossbeam-channel = ">=0.5.13"

leaf = { path = "../leaf" }